--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ajv": "^5.0.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.27",
+    "firebase": "^6.3.4",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.0",
